<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="7dip" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow android:layout_weight="1" >

            <Button
                android:id="@+id/n1"
                android:layout_width="0dip"
                android:layout_height="65dip"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/n2"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/n3"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit3"
                android:textSize="30sp" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <Button
                android:id="@+id/n4"
                android:layout_width="0dip"
                android:layout_height="65dip"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/n5"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/n6"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit6"
                android:textSize="30sp" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <Button
                android:id="@+id/n7"
                android:layout_width="0dip"
                android:layout_height="65dip"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/n8"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/n9"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit9"
                android:textSize="30sp" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/n0"
                android:layout_width="0dip"
                android:layout_height="65dip"
                android:layout_margin="1dip"
                android:layout_weight="1"
                android:background="@drawable/dial"
                android:text="@string/digit0"
                android:textSize="30sp" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

</RelativeLayout>