<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FAFAFA"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="left"
            android:text="@string/game_mode"
            android:textColor="#000000"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="#BEBEBE"
            android:orientation="horizontal" />
    </LinearLayout>

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/radio_timed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:checked="true"
            android:gravity="left|center_vertical"
            android:text="@string/timed"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:gravity="left|center_vertical"
            android:text="@string/normal"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_mistakes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:gravity="left|center_vertical"
            android:text="MISTAKES"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="15dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="left"
            android:text="@string/level_layout"
            android:textColor="#000000"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="#BEBEBE"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/digits"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/digits"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/digits_incr"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/settings_button_selector"
                android:contentDescription="@string/contentDescription"
                android:scaleType="center"
                android:src="@drawable/collapse_user_profile" />

            <TextView
                android:id="@+id/digits_value"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:gravity="center"
                android:textColor="#700e0e"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/digits_decr"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/settings_button_selector"
                android:contentDescription="@string/contentDescription"
                android:scaleType="center"
                android:src="@drawable/expand_user_profile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rows"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rows"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/rows_incr"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/settings_button_selector"
                android:contentDescription="@string/contentDescription"
                android:scaleType="center"
                android:src="@drawable/collapse_user_profile" />

            <TextView
                android:id="@+id/rows_value"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:gravity="center"
                android:textColor="#700e0e"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/rows_decr"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/settings_button_selector"
                android:contentDescription="@string/contentDescription"
                android:scaleType="center"
                android:src="@drawable/expand_user_profile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/columns"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/columns"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/columns_incr"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/settings_button_selector"
                android:contentDescription="@string/contentDescription"
                android:scaleType="center"
                android:src="@drawable/collapse_user_profile" />

            <TextView
                android:id="@+id/columns_value"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:gravity="center"
                android:textColor="#700e0e"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/columns_decr"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@drawable/settings_button_selector"
                android:contentDescription="@string/contentDescription"
                android:scaleType="center"
                android:src="@drawable/expand_user_profile" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="15dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="left"
            android:text="@string/level_diff"
            android:textColor="#000000"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="#BEBEBE"
            android:orientation="horizontal" />
    </LinearLayout>

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/radio_easy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:checked="true"
            android:gravity="left|center_vertical"
            android:text="@string/easy"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="left|center_vertical"
            android:text="@string/medium"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_hard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="left|center_vertical"
            android:text="@string/hard"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="15dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play_game"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/settings_button_selector"
            android:gravity="center"
            android:text="PLAY!"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/user_profile_picture"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_margin="5dip"
            android:contentDescription="@string/contentDescription"
            android:scaleType="center"
            android:src="@drawable/default_profile_picture" />

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/welcome_stranger"
            android:textColor="#700e0e"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <ImageButton
            android:id="@+id/user_profile_expander"
            android:layout_width="70dip"
            android:layout_height="50dip"
            android:background="@drawable/settings_button_selector"
            android:contentDescription="@string/contentDescription"
            android:scaleType="center"
            android:src="@drawable/collapse_user_profile" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="top"
        android:layout_height="10dip"
        android:indeterminate="true" />

</LinearLayout>