<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FAFAFA"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dip" />

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/radio_timed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:checked="true"
            android:gravity="left|center_vertical"
            android:text="@string/timed"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:gravity="left|center_vertical"
            android:text="@string/normal"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_mistakes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:gravity="left|center_vertical"
            android:text="MISTAKES"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="#BEBEBE"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="left"
            android:text="@string/game_mode"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="25dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/easy_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="1dip"
                android:layout_marginTop="5dip"
                android:layout_weight="1"
                android:background="@drawable/easy_button_selector"
                android:text="Easy"
                android:textSize="35sp" >
            </Button>

            <Button
                android:id="@+id/medium_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="1dip"
                android:layout_marginLeft="1dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dip"
                android:layout_weight="1"
                android:background="@drawable/medium_button_selector"
                android:gravity="center"
                android:text="Medium"
                android:textSize="35sp" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/user_profile_picture"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="2dip"
                android:layout_marginTop="2dip"
                android:layout_weight="1"
                android:background="@drawable/profile_gradient"
                android:textSize="35sp" >
            </Button>
            <!--
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="2dip"
                android:layout_marginTop="2dip"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/user_profile_picture"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:adjustViewBounds="false"
                    android:background="@drawable/profile_gradient"
                    android:contentDescription="@string/contentDescription"
                    android:scaleType="centerCrop" />
            </LinearLayout>
            -->

            <Button
                android:id="@+id/hard_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="1dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="1dip"
                android:layout_weight="1"
                android:background="@drawable/hard_button_selector"
                android:gravity="center"
                android:text="Hard"
                android:textSize="35sp" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:gravity="left"
            android:text="Board size"
            android:textColor="#000000"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:background="#BEBEBE"
            android:orientation="horizontal" />
    </LinearLayout>

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <RadioButton
            android:id="@+id/radio_small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:checked="true"
            android:gravity="left|center_vertical"
            android:text="SMALL"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="left|center_vertical"
            android:text="MEDIUM"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_large"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="left|center_vertical"
            android:text="LARGE"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dip" />

</LinearLayout>